--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -40,7 +40,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "20b8a8282fa144f6b011fc1dad3c7070"
+       "model_id": "58351c9a257644dd936d63a099488958"
       }
      },
      "metadata": {}
@@ -59,7 +59,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6f749ff433b347238679a935150c208b"
+       "model_id": "21d70f79f05b443da4327cf414c9fae4"
       }
      },
      "metadata": {}
@@ -78,7 +78,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "e38bc0efd18740fa83b7f055fcdab37c"
+       "model_id": "f844be5c149b4b2694a7cfd3c152337d"
       }
      },
      "metadata": {}
@@ -97,7 +97,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "052129a5cd034a208dfc3d4042d51201"
+       "model_id": "48f40359903249b1aa61126663880da3"
       }
      },
      "metadata": {}
@@ -123,13 +123,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
     "# experiment that we want to perform\n",
     "service_name = 'tfserving-resnetv2'\n",
-    "\n",
+    "cpu_m = 1000\n",
+    "ram_mb = 1000"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
     "config_names = [\n",
     "    'bentoml-iris-250m-512mb',\n",
     "    'bentoml-onnx-resnet50-250m-512mb',\n",
@@ -146,11 +155,47 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "output_type": "stream",
+     "name": "stdout",
+     "text": [
+      "Request Limit Overrid: 'cpu=1000m,memory=1000Mi'\n",
+      "kn service apply tfserving-resnetv2 --image ghcr.io/nimamahmoudi/tfserving-resnet:20210429213000 \\\n",
+      "  --limit 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --request 'cpu=1000m,memory=1000Mi' \\\n",
+      "  --port 5000 \\\n",
+      "  -a autoscaling.knative.dev/target=1 \\\n",
+      "  -a autoscaling.knative.dev/metric=concurrency\n",
+      "Applying service 'tfserving-resnetv2' in namespace 'default':\n",
+      "\n",
+      "  8.808s Traffic is not yet migrated to the latest revision.\n",
+      "  8.871s Ingress has not yet been reconciled.\n",
+      "  8.900s Waiting for load balancer to be ready\n",
+      "  9.499s Ready to serve.\n",
+      "\n",
+      "Service 'tfserving-resnetv2' applied to latest revision 'tfserving-resnetv2-00079' is available at URL:\n",
+      "http://tfserving-resnetv2.default.kn.nima-dev.com\n",
+      "waiting for settings to converge\n"
+     ]
+    }
+   ],
    "source": [
-    "# deploy the function"
+    "# deploy the function\n",
+    "request_limit_override = f\"'cpu={cpu_m}m,memory={ram_mb}Mi'\"\n",
+    "print('Request Limit Overrid:', request_limit_override)\n",
+    "\n",
+    "workload_spec = workload_configs[service_name]\n",
+    "# override request and limit values\n",
+    "workload_spec['opts']['--request'] = request_limit_override\n",
+    "workload_spec['opts']['--limit'] = request_limit_override\n",
+    "kn_command = kube.get_kn_command(**workload_spec)\n",
+    "print(kn_command)\n",
+    "!{kn_command}\n",
+    "print('waiting for settings to converge')\n",
+    "time.sleep(10)"
    ]
   },
   {
