added queuing for tfserving in smart proxy

--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -40,7 +40,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "58351c9a257644dd936d63a099488958"
+       "model_id": "6df05e85bd914f78be652fef515379cc"
       }
      },
      "metadata": {}
@@ -59,7 +59,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "21d70f79f05b443da4327cf414c9fae4"
+       "model_id": "bb960197520842fa9de3417c956591f0"
       }
      },
      "metadata": {}
@@ -78,7 +78,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "f844be5c149b4b2694a7cfd3c152337d"
+       "model_id": "59d4bd6b87f74af7a877512ffcfbabff"
       }
      },
      "metadata": {}
@@ -97,7 +97,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "48f40359903249b1aa61126663880da3"
+       "model_id": "2b5d71d8a1c54c72854c3ef3dcacfeca"
       }
      },
      "metadata": {}
@@ -129,6 +129,7 @@
    "source": [
     "# experiment that we want to perform\n",
     "service_name = 'tfserving-resnetv2'\n",
+    "override_url = f'http://localhost:3000/proxy/{service_name}'\n",
     "cpu_m = 1000\n",
     "ram_mb = 1000"
    ]
@@ -155,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -169,14 +170,8 @@
       "  --port 5000 \\\n",
       "  -a autoscaling.knative.dev/target=1 \\\n",
       "  -a autoscaling.knative.dev/metric=concurrency\n",
-      "Applying service 'tfserving-resnetv2' in namespace 'default':\n",
-      "\n",
-      "  8.808s Traffic is not yet migrated to the latest revision.\n",
-      "  8.871s Ingress has not yet been reconciled.\n",
-      "  8.900s Waiting for load balancer to be ready\n",
-      "  9.499s Ready to serve.\n",
-      "\n",
-      "Service 'tfserving-resnetv2' applied to latest revision 'tfserving-resnetv2-00079' is available at URL:\n",
+      "No changes to apply to service 'tfserving-resnetv2'.\n",
+      "Service 'tfserving-resnetv2' with latest revision 'tfserving-resnetv2-00079' (unchanged) is available at URL:\n",
       "http://tfserving-resnetv2.default.kn.nima-dev.com\n",
       "waiting for settings to converge\n"
      ]
@@ -200,10 +195,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "output_type": "execute_result",
+     "data": {
+      "text/plain": [
+       "{'prediction': [['platypus', 'echidna', 'partridge', 'beaver', 'house_finch']],\n",
+       " 'response_time_ms': 1202.806}"
+      ]
+     },
+     "metadata": {},
+     "execution_count": 28
+    }
+   ],
+   "source": [
+    "# call the request function with proper arguments\n",
+    "def call_request_func():\n",
+    "    request_func = request_funcs.workload_funcs[service_name]\n",
+    "    return request_func(url=override_url)\n",
+    "    # return request_func(url='http://tfserving-resnetv2.default.kn.nima-dev.com/v1/models/resnet:predict')\n",
+    "\n",
+    "call_request_func()"
+   ]
   },
   {
    "cell_type": "code",
