added new workload in the proxy

--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -40,7 +40,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "6df05e85bd914f78be652fef515379cc"
+       "model_id": "7fdf03e528c74e438c436014e41b9081"
       }
      },
      "metadata": {}
@@ -59,7 +59,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "bb960197520842fa9de3417c956591f0"
+       "model_id": "431798a75fc246179e4db7501168b7df"
       }
      },
      "metadata": {}
@@ -78,7 +78,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "59d4bd6b87f74af7a877512ffcfbabff"
+       "model_id": "f822d351fa5a497088efd87adb285215"
       }
      },
      "metadata": {}
@@ -97,7 +97,7 @@
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "2b5d71d8a1c54c72854c3ef3dcacfeca"
+       "model_id": "e5d579b7eb624a988c2ebdab2efb0875"
       }
      },
      "metadata": {}
@@ -123,13 +123,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
     "# experiment that we want to perform\n",
-    "service_name = 'tfserving-resnetv2'\n",
+    "# service_name = 'tfserving-resnetv2'\n",
+    "# service_name = 'bentoml-onnx-resnet50'\n",
+    "service_name = 'bentoml-iris'\n",
+    "\n",
     "override_url = f'http://localhost:3000/proxy/{service_name}'\n",
+    "\n",
     "cpu_m = 1000\n",
     "ram_mb = 1000"
    ]
@@ -156,7 +160,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -195,19 +199,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'prediction': [['platypus', 'echidna', 'partridge', 'beaver', 'house_finch']],\n",
-       " 'response_time_ms': 1202.806}"
+       "{'prediction': [0],\n",
+       " 'response_time_ms': 3942.1240000000003,\n",
+       " 'headers': {'X-Powered-By': 'Express',\n",
+       "  'X-Request-Id': 'c2ee05a8-616e-4a40-8d09-376bf31981df',\n",
+       "  'X-SmartProxy-queuePosition': '0',\n",
+       "  'X-SmartProxy-receivedAt': '1621457267358',\n",
+       "  'X-SmartProxy-responseAt': '1621457271295',\n",
+       "  'X-SmartProxy-upstreamResponseTime': '2934',\n",
+       "  'X-SmartProxy-upstreamRequestCount': '1',\n",
+       "  'X-SmartProxy-responseTime': '3937',\n",
+       "  'X-SmartProxy-queueTime': '1003'}}"
       ]
      },
      "metadata": {},
-     "execution_count": 28
+     "execution_count": 12
     }
    ],
    "source": [
@@ -215,7 +228,6 @@
     "def call_request_func():\n",
     "    request_func = request_funcs.workload_funcs[service_name]\n",
     "    return request_func(url=override_url)\n",
-    "    # return request_func(url='http://tfserving-resnetv2.default.kn.nima-dev.com/v1/models/resnet:predict')\n",
     "\n",
     "call_request_func()"
    ]
