added all workload configs to smart proxy

--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -123,14 +123,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
     "# experiment that we want to perform\n",
     "# service_name = 'tfserving-resnetv2'\n",
     "# service_name = 'bentoml-onnx-resnet50'\n",
-    "service_name = 'bentoml-iris'\n",
+    "# service_name = 'bentoml-iris'\n",
+    "service_name = 'tfserving-mobilenetv1'\n",
     "\n",
     "override_url = f'http://localhost:3000/proxy/{service_name}'\n",
     "\n",
@@ -199,28 +200,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'prediction': [0],\n",
-       " 'response_time_ms': 3942.1240000000003,\n",
+       "{'prediction': [['brassiere', 'gasmask', 'seat_belt', 'Band_Aid', 'buckle']],\n",
+       " 'response_time_ms': 1298.084,\n",
        " 'headers': {'X-Powered-By': 'Express',\n",
-       "  'X-Request-Id': 'c2ee05a8-616e-4a40-8d09-376bf31981df',\n",
+       "  'X-Request-Id': '9fe3aee8-190f-4a2d-ad72-2a0d21e5b12f',\n",
        "  'X-SmartProxy-queuePosition': '0',\n",
-       "  'X-SmartProxy-receivedAt': '1621457267358',\n",
-       "  'X-SmartProxy-responseAt': '1621457271295',\n",
-       "  'X-SmartProxy-upstreamResponseTime': '2934',\n",
+       "  'X-SmartProxy-receivedAt': '1621458375564',\n",
+       "  'X-SmartProxy-responseAt': '1621458376807',\n",
+       "  'X-SmartProxy-upstreamResponseTime': '241',\n",
        "  'X-SmartProxy-upstreamRequestCount': '1',\n",
-       "  'X-SmartProxy-responseTime': '3937',\n",
-       "  'X-SmartProxy-queueTime': '1003'}}"
+       "  'X-SmartProxy-responseTime': '1243',\n",
+       "  'X-SmartProxy-queueTime': '1002'}}"
       ]
      },
      "metadata": {},
-     "execution_count": 12
+     "execution_count": 29
     }
    ],
    "source": [
