added ready replicas to returned status

--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -200,28 +200,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
      "output_type": "execute_result",
      "data": {
       "text/plain": [
-       "{'prediction': [['brassiere', 'gasmask', 'seat_belt', 'Band_Aid', 'buckle']],\n",
-       " 'response_time_ms': 1298.084,\n",
+       "{'prediction': [['terrapin',\n",
+       "   'mud_turtle',\n",
+       "   'platypus',\n",
+       "   'dung_beetle',\n",
+       "   'American_egret']],\n",
+       " 'response_time_ms': 1350.823,\n",
        " 'headers': {'X-Powered-By': 'Express',\n",
-       "  'X-Request-Id': '9fe3aee8-190f-4a2d-ad72-2a0d21e5b12f',\n",
+       "  'X-Request-Id': 'edea7a5d-9f78-451a-b997-204540399585',\n",
        "  'X-SmartProxy-queuePosition': '0',\n",
-       "  'X-SmartProxy-receivedAt': '1621458375564',\n",
-       "  'X-SmartProxy-responseAt': '1621458376807',\n",
-       "  'X-SmartProxy-upstreamResponseTime': '241',\n",
+       "  'X-SmartProxy-receivedAt': '1621459233784',\n",
+       "  'X-SmartProxy-responseAt': '1621459235037',\n",
+       "  'X-SmartProxy-upstreamResponseTime': '250',\n",
        "  'X-SmartProxy-upstreamRequestCount': '1',\n",
-       "  'X-SmartProxy-responseTime': '1243',\n",
-       "  'X-SmartProxy-queueTime': '1002'}}"
+       "  'X-SmartProxy-responseTime': '1253',\n",
+       "  'X-SmartProxy-queueTime': '1003'}}"
       ]
      },
      "metadata": {},
-     "execution_count": 29
+     "execution_count": 33
     }
    ],
    "source": [
