--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -151,7 +151,9 @@
     "override_url = f'http://localhost:3000/proxy/{service_name}'\n",
     "\n",
     "cpu_m = 1000\n",
-    "ram_mb = 1000"
+    "ram_mb = 1000\n",
+    "\n",
+    "rps_list = [5] * 60"
    ]
   },
   {
@@ -341,15 +343,6 @@
     "        print('exception occured:')\n",
     "        traceback.print_exc()\n",
     "        return None"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 8,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "rps_list = [5] * 3"
    ]
   },
   {
