--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -347,24 +347,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "============ Experiment Started ============\nTime Started: 2021-05-20 12:02:21.783987-04:00\n"
+      "============ Experiment Started ============\nTime Started: 2021-05-20 13:12:51.546278-04:00\n"
      ]
     },
     {
      "output_type": "display_data",
      "data": {
-      "text/plain": "  0%|          | 0/3 [00:00<?, ?it/s]",
+      "text/plain": "  0%|          | 0/60 [00:00<?, ?it/s]",
       "application/vnd.jupyter.widget-view+json": {
        "version_major": 2,
        "version_minor": 0,
-       "model_id": "96dc1e9eabec4cc2995bf59eec9ec75f"
+       "model_id": "4846875abf9342759d2d412e5ff8f4d2"
       }
      },
      "metadata": {}
@@ -373,7 +373,52 @@
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Total Requests Made: 938\nSuccessful Requests Made: 938\n"
+      "exception occured:exception occured:\n",
+      "exception occured:\n",
+      "\n",
+      "exception occured:\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-7-e79221552b7f>\", line 4, in worker_func\n",
+      "    return call_request_func()\n",
+      "  File \"<ipython-input-5-63e6ec19e9e8>\", line 4, in call_request_func\n",
+      "    result = request_func(url=override_url)\n",
+      "  File \"/home/ubuntu/serverless-ml-serving/experiments/helpers/request_funcs.py\", line 160, in request_tfserving_resnetv2\n",
+      "    response.raise_for_status()\n",
+      "  File \"/home/ubuntu/miniconda/lib/python3.8/site-packages/requests/models.py\", line 943, in raise_for_status\n",
+      "    raise HTTPError(http_error_msg, response=self)\n",
+      "requests.exceptions.HTTPError: 500 Server Error: Internal Server Error for url: http://localhost:3000/proxy/tfserving-resnetv2\n",
+      "Traceback (most recent call last):\n",
+      "  File \"<ipython-input-7-e79221552b7f>\", line 4, in worker_func\n",
+      "    return call_request_func()\n",
+      "  File \"<ipython-input-7-e79221552b7f>\", line 4, in worker_func\n",
+      "    return call_request_func()\n",
+      "  File \"<ipython-input-5-63e6ec19e9e8>\", line 4, in call_request_func\n",
+      "    result = request_func(url=override_url)\n",
+      "  File \"/home/ubuntu/serverless-ml-serving/experiments/helpers/request_funcs.py\", line 160, in request_tfserving_resnetv2\n",
+      "    response.raise_for_status()\n",
+      "  File \"/home/ubuntu/miniconda/lib/python3.8/site-packages/requests/models.py\", line 943, in raise_for_status\n",
+      "    raise HTTPError(http_error_msg, response=self)\n",
+      "requests.exceptions.HTTPError: 500 Server Error: Internal Server Error for url: http://localhost:3000/proxy/tfserving-resnetv2\n",
+      "  File \"<ipython-input-7-e79221552b7f>\", line 4, in worker_func\n",
+      "    return call_request_func()\n",
+      "  File \"<ipython-input-5-63e6ec19e9e8>\", line 4, in call_request_func\n",
+      "    result = request_func(url=override_url)\n",
+      "  File \"/home/ubuntu/serverless-ml-serving/experiments/helpers/request_funcs.py\", line 160, in request_tfserving_resnetv2\n",
+      "    response.raise_for_status()\n",
+      "  File \"/home/ubuntu/miniconda/lib/python3.8/site-packages/requests/models.py\", line 943, in raise_for_status\n",
+      "    raise HTTPError(http_error_msg, response=self)\n",
+      "requests.exceptions.HTTPError: 500 Server Error: Internal Server Error for url: http://localhost:3000/proxy/tfserving-resnetv2\n",
+      "  File \"<ipython-input-5-63e6ec19e9e8>\", line 4, in call_request_func\n",
+      "    result = request_func(url=override_url)\n",
+      "  File \"/home/ubuntu/serverless-ml-serving/experiments/helpers/request_funcs.py\", line 160, in request_tfserving_resnetv2\n",
+      "    response.raise_for_status()\n",
+      "  File \"/home/ubuntu/miniconda/lib/python3.8/site-packages/requests/models.py\", line 943, in raise_for_status\n",
+      "    raise HTTPError(http_error_msg, response=self)\n",
+      "requests.exceptions.HTTPError: 500 Server Error: Internal Server Error for url: http://localhost:3000/proxy/tfserving-resnetv2\n",
+      "Total Requests Made: 18050\n",
+      "Successful Requests Made: 18046\n"
      ]
     }
    ],
@@ -410,14 +455,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
      "output_type": "stream",
      "name": "stdout",
      "text": [
-      "Results Name: res-2021-05-20_12-05-42\n"
+      "Results Name: res-2021-05-20_14-13-02\n"
      ]
     }
    ],
