added trace for another workload

--- a/experiments/05-trace-experiment.ipynb
+++ b/experiments/05-trace-experiment.ipynb
@@ -143,8 +143,8 @@
    "outputs": [],
    "source": [
     "# experiment that we want to perform\n",
-    "service_name = 'tfserving-resnetv2'\n",
-    "# service_name = 'bentoml-onnx-resnet50'\n",
+    "# service_name = 'tfserving-resnetv2'\n",
+    "service_name = 'bentoml-onnx-resnet50'\n",
     "# service_name = 'bentoml-iris'\n",
     "# service_name = 'tfserving-mobilenetv1'\n",
     "\n",
